learning/deployment/file-server/service.yml
apiVersion: v1
kind: Service
metadata:
  name: file-server
  namespace: development
spec:
  selector:
    app: file-server
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: LoadBalancer
