learning/deployment/file-server/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-server
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: file-server.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: file-server
                port:
                  number: 80
